--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
 <meta charset="utf-8">
 
-<title>MyApp</title>
+<title>Gaulish.io</title>
 <meta name="description" content="My Application">
 <meta name="author" content="Your Name">
 </head>
 
 <body>
-<h2>Cognito User</h2>
+<h2>Cognito User: on Gaulish.io!</h2>
 
-<p style="white-space:pre-line;" id="token_status"></p>
+<p style="white-space:pre-line;background-color: aqua;" id="token_status"></p>
 
 <p>Id Token</p>
 <p style="white-space:pre-line;" id="id_token"></p>
